2005-04-25  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXNotify.c: syncd with tclUnixNotfy.c changes since
	2004-06-22, added compile time check for threaded tcl core, removed
	unthreaded code paths as they are never used anyway, fixed
	TkMacOSXAlertNotifier() implementation.

	* unix/Makefile.in: added TCL_STUB_LIB_FILE, needed for unexporting of
	symbols from libtclstub to avoid duplicate symbol warnings.

	* unix/tcl.m4 (Darwin): added configure checks for recently added linker
	flags -single_module and -search_paths_first to allow building with
	older tools (and on Mac OS X 10.1), use -single_module in SHLIB_LD and
	not just T{CL,K}_SHLIB_LD_EXTRAS, added unexporting from Tk of symbols
	from libtclstub to avoid duplicate symbol warnings, added PLAT_SRCS
	definition for Mac OS X.
	(SC_MISSING_POSIX_HEADERS): added caching of dirent.h check.
	(SC_TCL_64BIT_FLAGS): fixed 'checking for off64_t' message output.

	* unix/configure: autoconf-2.13

2005-04-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tkUnixFont.c (FontMapLoadPage): reorder char[] decls to
	avoid possible segv.  Minimal fix for [Bug 1122671]

	* library/tkfbox.tcl (::tk::dialog::file::): fix typeMenuLab ref.
	Add undoc'd ::tk::dialog::file::showHiddenBtn var (default 0) that
	will add a "Show Hidden" checkbutton to tk_get*File and
	tk_chooseDirectory if set to true.
	* library/choosedir.tcl (::tk::dialog::file::chooseDir::): fix
	cancelBtn ref, add hiddenBtn ref for "Show Hidden" button.

2005-04-09  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/README: updated requirements for OS & developer tool
	versions + other small fixes/cleanup.

	* macosx/tkMacOSXEntry.c (ComputeIncDecParameters): manually define
	constants present only in 10.3 headers so that we can build on 10.2.
	
	* macosx/Wish.pbproj/project.pbxproj: fixed absolute path to 
	tkEntry.h that confused 10.2 PBX.
	
	* unix/tcl.m4 (Darwin): added -single_module linker flag to